Tweaks to Pfenning reference

--- a/submission/primiero.bib
+++ b/submission/primiero.bib
@@ -292,8 +292,9 @@
   author = {Frank Pfenning},
   title = {Handout on Automated Theorem Proving},
   pages = {},
-  annote = {2004},
-	school = {School of Computer Science, Carnegie Mellon University}
+  year = {2004},
+	institution = {School of Computer Science, Carnegie Mellon University},
+  url = {https://www.cs.cmu.edu/~fp/courses/atp/handouts/atp.pdf}
 }
 
 
