--- a/submission/primiero.bib
+++ b/submission/primiero.bib
@@ -13423,6 +13423,22 @@
   bibfiles = {dirk,appl}
 }
 
+@book{Priest:InContradiction:2006,
+  author = {Priest, Graham},
+  title = {In Contradiction (2nd. Ed.)},
+  uuid = {EA9B092C-CFBE-4200-81BB-72432245EBED},
+  publisher = {Oxford University Press},
+  address = {Oxford},
+  year = {2006},
+  url = {},
+  source_app = {EndNote},
+  EndNote_reference_number = {1020},
+  label = {PriIC},
+  Citation_identifier = {Priest 2006a},
+  publicationStatus = {Unknown}
+}
+
+
 @ARTICLE{P&S:ssbrl,
   author = {Graham Priest and Richard Sylvan},
   title = {Simplified semantics for basic relevant logics},
